feat(booking): add booking and payment status handling